# FCCSW

./: .gitignore  CMakeLists.txt  TestBox.gdml  checkOverlaps.py  init.sh  plotFakeRate.py  plotSeeds_podio.py  plot_circle.py  plot_delta_pt.py  test.py  tgeovox.C
GaudiPythonTest/: CMakeLists.txt
GaudiPythonTest/components/: PodioTest.cpp  PodioTest.h
GaudiPythonTest/options/: PodioTest.py
PileupStudy/: CMakeLists.txt  PileupStudyMakefile.mk
PileupStudy/components/: CellidTestAlgo.cpp  CountModuleSvc.cpp  CountModuleSvc.h  OccupancyHistograms.cpp  OccupancyHistograms.h
PileupStudy/options/: count_modules.py  geantino_scan.py  gen_level_NUMPILEUP100_.py  gen_level_NUMPILEUP10_.py  gen_level_pileup.py  min_bias_pool.py  min_bias_pool_DetHist.py  read_hits_to_cellid.py
PileupStudy/python/: geant_fullsim_baseconfig.py  plot_occupancy.py
TrkValidation/: CMakeLists.txt  TrkValidationMakefile.mk
TrkValidation/compact/: FCChh_Option3_Definitions_1Layeronly.xml  FCChh_Option3_Definitions_BarrelsOnly.xml  FCChh_Option3_Definitions_Small.xml  FCChh_Option3_Mod.xml  Tracker.xml  Tracker_1Layeronly.xml  Tracker_BarrelsOnly.xml  Tracker_Small.xml  Tracker_withoutBeampipe.xml
TrkValidation/components/: MomentumRangeParticleGunPt.cpp  MomentumRangeParticleGunPt.h  RangePileup.cpp  RangePileup.h  SimG4GeantinoDeposits.cpp  SimG4GeantinoDeposits.h  SimG4MultipleParticleGeneratorTool.cpp  SimG4MultipleParticleGeneratorTool.h  SimG4SaveTrackerHitsWithDigiSmearing.cpp  SimG4SaveTrackerHitsWithDigiSmearing.h  SimG4SaveTrackerHitsWithTrackID.cpp  SimG4SaveTrackerHitsWithTrackID.h  SimG4SingleParticleGeneratorTool.h  SimG4SingleParticleGeneratorToolPt.cpp  SimG4SingleParticleGeneratorToolPt.h
TrkValidation/condor/: minBias1.sub  minBias2.sub  minBias3.sub  minBias4.sub  minBias5.sub  minBias6.sub  minBias_DectMaster1.sub  minBias_DectMaster2.sub  minBias_DectMaster3.sub  minBias_Gauss1.sub  minBias_Gauss2.sub  minBias_Gauss3.sub  minBias_Gauss4.sub  minBias_Gauss5.sub  minBias_Gauss6.sub  minBias_noBfield1.sub  minBias_noBfield2.sub  minBias_noBfield3.sub  runCondor.sh  submit.sh  submit.sub
TrkValidation/data/: test.py
TrkValidation/options/: chargedGeantinoScan-etaSlice.py  chargedGeantinoScan-phiSlice.py  extrapolationTest.py  fittest.py  geant_fullsim_tracker_singleparticles.py  geantinoScan-Full.py  geantinoScan-etaSlice.py  geantinoScan-phiSlice_Mod.py  material_scan.py  minBias5.py  min_bias_pool.py  min_bias_pool_NO_BFIELD.py  single_particle_phiRange_ptMin100_ptMax100000_.py  single_particle_ptMin1000000_.py  single_particle_ptMin100000_.py  single_particle_ptMin5000_.py  trackFitExample.py
TrkValidation/python/: geantFullsimBaseConfig.py  geantinoBaseConfig.py  geantinoBaseConfig_trackerv3_03.py  singleParticleBaseConfig.py
TrkValidation/scripts/: fill_hist.py  min_bias_hists.py  num_plot_hits.py  num_read_cluster.py  (+10 more)
(+146 files in other folders)
